# filescan

./: AGENTS.md  CLAUDE.md  README.md  TODO.md  __init__.py  analyser.py  config.yml  database.py  file_index.db  hasher.py  pyproject.toml  reporter.py  scanner.py  test_analyser.py  test_hasher.py  test_reporter.py  test_scanner.py  testdb.py
src/filescan/: AGENTS.md  __main__.py  cli.py  config.py  models.py  progress.py
src/filescan/cleanup/: waste_detector.py
src/filescan/dedupe/: __init__.py  duplicates.py  hashing.py
src/filescan/execution/: __init__.py  mover.py  verifier.py
src/filescan/inventory/: __init__.py  normalizer.py  preflight.py  refresh.py  scanner.py
src/filescan/planning/: __init__.py  artifacts.py  folder_summary.py  proposals.py
src/filescan/reporting/: __init__.py  largest_files.py  xlsx.py
src/filescan/similarity/: __init__.py  clusters.py  folders.py  merge_review.py
src/filescan/storage/: __init__.py  db.py  repositories.py
tests/: __init__.py  conftest.py
tests/helpers/: __init__.py  indexing.py  tree_builder.py
tests/integration/: test_cli_commands.py  test_cli_preflight.py  test_duplicates_pipeline.py  test_execute_verify.py  test_plan_command.py  test_report_command.py  test_report_fixture_contents.py  test_scan_pipeline.py
tests/manual/report_fixture/: README.md
tests/manual/report_fixture/input/root/misc/: other.txt
tests/manual/report_fixture/input/root/projectA/docs/: readme.txt
tests/manual/report_fixture/output/: config.yml  file_index.db-journal  filescan_report.xlsx
tests/unit/: test_cluster_execution.py  test_config.py  test_duplicate_detector.py  test_folder_similarity.py  test_inventory_scanner.py  test_merge_review.py  test_path_normalizer.py  test_plan_artifact_extension.py  test_plan_builder.py  test_repositories.py  test_similarity_clusters.py  test_waste_detector.py
