[tool.poetry]
name = "filescan"
version = "0.1.0"
description = ""
authors = ["David Baines <davidcbaines@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
pyyaml = ">=6.0.3,<7.0.0"
xxhash = [
    {version = ">=3.6.0,<4.0.0", python = ">=3.12"},
    {version = ">=3.4.0,<3.5.0", python = ">=3.8,<3.12"}
]

[tool.poetry.dev-dependencies]
flake8 = {version = ">=7.3.0,<8.0.0", python = ">=3.12"}
isort = {version = ">=8.0.1,<9.0.0", python = ">=3.12"}
black = {version = ">=26.3.1,<27.0.0", python = ">=3.12"}

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
